<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="eCellState" Id="{c1f1bc16-5ab3-4c81-b51e-11368c480fa7}">
    <Declaration><![CDATA[TYPE eCellState :
(
	eCellState_Manual, eCellState_Automatic, eCellState_Error
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>