<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="st_HMItoPLC_Cell" Id="{148c20d2-bb38-4eac-9e30-560a921921d2}">
    <Declaration><![CDATA[TYPE st_HMItoPLC_Cell :
STRUCT
    bPower : BOOL; // power hydrualics maybe?
    bGoToManual: BOOL;
	bGoToAuto: BOOL;
	bReset : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>